--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    {% comment %}
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    {% endcomment %}
-
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
